Discriminator improvements